--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -9,6 +9,13 @@
   position: relative
   @include shadow
   @include box-sizing-border
+  .box-image
+    width: 300px
+    height: 169px
+    img
+      position: absolute
+      top: 0px
+      left: 0px
   h4
     padding: 5px
     margin: 0px
