--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :title, "Free-to-Learn Culinary School"
+- content_for :title, ""
 
 - cache ['home', version, user_signed_in?] do
   .container
