nav bar social icon fixes

--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -47,7 +47,7 @@
       margin-top: 0px
       padding-top: 0px
       display: inline-block
-      padding-right: 40px
+      padding-right: 30px
       text-align: center
       line-height: 19px
 
@@ -60,19 +60,8 @@
     li > a:hover
       color: $brickDark
 
-  .social-group
-    display: inline-block
-    vertical-align: bottom
-    margin-bottom: -4px
-    ul
-      display: inline-block
-      li
-        display: inline-block
-        margin-top: 0px
-        padding-left: 0px
-        &:first-child
-          padding-left: 25px
-        list-style-type: none
+    li.social
+      padding-right: 0px
 
   .auth-group
     display: inline-block
