--- a/app/views/mailing_list/_subscribe.html.haml
+++ b/app/views/mailing_list/_subscribe.html.haml
@@ -1,10 +1,8 @@
-- orange ||= false
-.subscribe.pull-right{ class: ('orange' if orange)  }
-  = form_tag "http://www.aweber.com/scripts/addlead.pl" do
-    .input-append
-      = email_field_tag('email', nil, {class: 'span4', placeholder: 'Enter your email for ChefSteps updates', required: true})
-      %input{ type: "hidden", name: "listname", value: 'cs_c_sousvide'}
-      %input{ type: "hidden", name: "meta_adtracking", value: 'site_top_form'}
-      %input{ type: "hidden", name: "redirect", value: thank_you_subscribing_url}
-      %button.btn{ :type=>"submit"}
-        %i.icon-double-chevron-right
+= form_tag "http://www.aweber.com/scripts/addlead.pl", class: 'form-inline' do
+  .input-append
+    = email_field_tag('email', nil, {class: 'span3', placeholder: 'Enter your email for updates', required: true})
+    %input{ type: "hidden", name: "listname", value: 'cs_c_sousvide'}
+    %input{ type: "hidden", name: "meta_adtracking", value: 'site_top_form'}
+    %input{ type: "hidden", name: "redirect", value: thank_you_subscribing_url}
+    %button.btn.btn-primary{ :type=>"submit"}
+      %i.icon-double-chevron-right
