--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,5 @@
 - content_for :title, ""
+- content_for :description, "Free online cooking school from key members of the Modernist Cuisine team. Our first course will teach you need to know about sous vide cooking."
 
 - cache ['home', version, user_signed_in?] do
   .container
