--- a/app/views/admin/courses/_form.html.haml
+++ b/app/views/admin/courses/_form.html.haml
@@ -5,6 +5,7 @@
     = f.input :published
     = f.input :title
     = f.input :description, label: "Description (Markdown or HTML)"
+    = f.input :short_description, label: "Short description, for SERPs"
 
   = section("Activities", f) do
     = hidden_field_tag "activity_hierarchy"
