--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
 
     %meta{charset: "utf-8"}
 
-    %meta{name: "description", content: "Free to learn culinary school"}
+    %meta{name: "description", content: yield(:description)}
     -# %meta{:name => "keywords", :content => ""}
     -# %meta{:name => "author", :content => ""}
 
