search by model

--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -14,6 +14,9 @@
             %th Title
             %td= activity.title
           %tr
+            %th Tag List
+            %td= activity.tag_list
+          %tr
             %th Description
             %td= activity.description
           %tr
