--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -5,6 +5,7 @@
   = f.inputs name: "Activity Details" do
     = f.input :published
     = f.input :title
+    = f.input :tag_list
     = f.input :description, label: "Description (Markdown or HTML)"
     = f.input :youtube_id
     = f.input :transcript
