--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -22,6 +22,7 @@
 @import twitter/bootstrap/popovers
 @import twitter/bootstrap/tooltip
 @import font-awesome
+@import select2
 
 $redLight:      #e63742
 @import admin/quiz
@@ -207,5 +208,13 @@ body.admin_namespace
 
 .input.hidden
   padding: 0
+
+#activity_tag_list_input
+  #s2id_activity_tag_list
+    width: 76%
+  .select2-search-field
+    input
+      border: none
+      box-shadow: none
 
 
