--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
     %meta{charset: "utf-8"}
 
     %meta{name: "description", content: "Free to learn culinary school"}
-    -# %meta{:name => "keywords", :content => ""}
+    %meta{:name => "keywords", :content => yield(:keywords)}
     -# %meta{:name => "author", :content => ""}
 
     -# Mobile
