fixed course url on forum

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,7 +11,7 @@
             - if current_page?(course_url('accelerated-sous-vide-cooking-course'))
               Course
             - else
-              = link_to 'Course', course_path('accelerated-sous-vide-cooking-course')
+              = link_to 'Course', course_url('accelerated-sous-vide-cooking-course')
           %li
             = link_to 'Forum', 'http://forum.chefsteps.com'
 
