--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -22,7 +22,7 @@
             = link_to 'Shop', 'http://store.chefsteps.com'
 
           %li.last
-            = link_to 'Search', search_index_path
+            = link_to 'Search', search_index_url
 
       .navbar.noprint
         %ul.nav.social
