Fontawesome override wasn't in the right place

--- a/app/assets/stylesheets/global_navigation.css.sass
+++ b/app/assets/stylesheets/global_navigation.css.sass
@@ -10,6 +10,14 @@
 @import application/header
 @import application/media_queries
 
+
+@font-face
+  font-family: "FontAwesome"
+  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot")
+  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot?#iefix") format("eot"), url("http://www.chefsteps.com/assets/fontawesome-webfont.woff") format("woff"), url("http://www.chefsteps.com/assets/fontawesome-webfont.ttf") format("truetype"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svgz#FontAwesomeRegular") format("svg"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svg#FontAwesomeRegular") format("svg")
+  font-style: normal
+  font-weight: normal
+
 .container
   margin-left: 24px
 
