updates to user registration forms

--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -34,3 +34,12 @@
     letter-spacing: 2px
     font-size: 13px
 
+.box-full
+  width: 100%
+  height: inherit
+  padding: 40px
+
+.registration
+  float: left
+  width: 50%
+
