css updates and validations

--- a/app/assets/stylesheets/application/_custom_mixins.css.sass
+++ b/app/assets/stylesheets/application/_custom_mixins.css.sass
@@ -27,7 +27,7 @@
   -o-filter: grayscale($grayScale)
   filter: grayscale($grayScale)
 
-=box-sizing-border
+=boxsizing
   box-sizing: border-box
   -moz-box-sizing: border-box
   -webkit-box-sizing: border-box
