--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -68,7 +68,7 @@
 
 .filmstrip-item
   position: relative
-  @include box-sizing-border
+  @include boxsizing
 
   padding: 5px
   .filmstrip-thumbnail
@@ -81,7 +81,7 @@
   bottom: 0px
   right: 0px
   color: rgba(0,0,0,0)
-  @include box-sizing-border
+  @include boxsizing
   width: 100%
   height: 100%
   padding: 20px 10px
