--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -1,3 +1,5 @@
+@import application/custom_mixins
+
 .search-container
   text-align: center
 
@@ -11,7 +13,7 @@
   margin: 20px
   position: relative
   @include shadow
-  @include box-sizing-border
+  @include boxsizing
   .box-image
     width: 300px
     height: 169px
@@ -25,7 +27,7 @@
     background: rgba(0,0,0,.5)
     color: white
     width: 100%
-    @include box-sizing-border
+    @include boxsizing
     text-align: center
     position: absolute
     bottom: 0px
@@ -42,4 +44,6 @@
 .registration
   float: left
   width: 50%
+  padding: 5px
+  @include boxsizing
 
