--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -18,7 +18,7 @@
     float: left
     width: 50%
     padding: 10px 50px 20px 20px
-    @include box-sizing-border
+    @include boxsizing
     .step-directions
       li
       p
