--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -54,7 +54,7 @@
   .container
     width: 100%
     padding: 0px 20px
-    @include box-sizing-border
+    @include boxsizing
   #quiz-container
     .hero-unit .dials
       margin-top: 0
