--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -44,6 +44,10 @@
 .registration
   float: left
   width: 50%
-  padding: 5px
   @include boxsizing
+.standard
+  padding-right: 20px
+  border-right: 1px solid rgba(100,100,100,.1)
+.facebook
+  padding-left: 20px
 
