--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -26,9 +26,10 @@
     %hr
     .registration.standard
       = form_for @user, url: registration_path(@user), html: {class: 'form-horizontal'} do |f|
-        .alert
-          - @user.errors.messages.each do |name,message|
-            %div= message[0]
+        - if @user.errors.any?
+          .alert.alert-error
+            - @user.errors.messages.each do |name,message|
+              %div= message[0]
         .control-group
           .control-label= f.label :name
           .controls= f.text_field :name
@@ -57,5 +58,5 @@
               = check_box_tag :okay_to_email, true, true
               = "Please email me the latest updates from ChefSteps".html_safe
             =f.submit 'Sign Up', class: 'btn btn-primary'
-    .registration.facbook
+    .registration.facebook
       = render 'devise/shared/facebook_login', text: 'Sign up with <b>Facebook</b>'
