--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -39,7 +39,8 @@
 .box-full
   width: 100%
   height: inherit
-  padding: 40px
+  padding: 0px 40px 20px
+  margin: 0px
 
 .registration
   float: left
