--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -406,3 +406,10 @@
 
   .featured-and-filmstrip
     width: 100%
+
+  .box
+    margin: 0px
+    .registration
+      width: 100%
+      padding: 0px
+      border: none
