--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -46,6 +46,10 @@
   float: left
   width: 50%
   @include boxsizing
+  .controls-small
+    label, a
+      vertical-align: bottom
+      font-size: 12px
 .standard
   padding-right: 20px
   border-right: 1px solid rgba(100,100,100,.1)
