css step tweaks

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -13,6 +13,7 @@
   margin: 10px 0px
   float: left
   width: 100%
+  line-height: 20px
   @include shadow
   .step-directions-col
     float: left
@@ -21,6 +22,7 @@
     @include box-sizing-border
     .step-directions
       li
+        padding: 5px 0px
       p
         margin: 0px
       font-size: 16px
