improved line spacing for activities

--- a/app/assets/stylesheets/application/_fonts.css.sass
+++ b/app/assets/stylesheets/application/_fonts.css.sass
@@ -1,36 +1,45 @@
 =font-sans-tiny
   font-family: $sansFontFamily
   font-size: 12px
+  font-weight: 200
 
 =font-sans-small
   font-family: $sansFontFamily
   font-size: 14px
+  font-weight: 200
 
 =font-sans-medium
   font-family: $sansFontFamily
   font-size: 16px
+  font-weight: 200
 
 =font-sans-large
   font-family: $sansFontFamily
   font-size: 20px
+  font-weight: 200
 
 =font-serif-tiny
   font-family: $serifFontFamily
   font-size: 12px
+  font-weight: 200
 
 =font-serif-small
   font-family: $serifFontFamily
   font-size: 14px
+  font-weight: 200
 
 =font-serif-medium
   font-family: $serifFontFamily
   font-size: 16px
+  font-weight: 200
 
 =font-serif-large
   font-family: $serifFontFamily
   font-size: 20px
+  font-weight: 200
 
 =font-serif-huge
   font-family: $serifFontFamily
   font-size: 24px
+  font-weight: 200
 
