improve font spacing for home and course pages

--- a/app/assets/stylesheets/application/_fonts.css.sass
+++ b/app/assets/stylesheets/application/_fonts.css.sass
@@ -7,11 +7,14 @@
   font-family: $sansFontFamily
   font-size: 14px
   font-weight: 200
+  letter-spacing: 1px
 
 =font-sans-medium
   font-family: $sansFontFamily
   font-size: 16px
   font-weight: 200
+  letter-spacing: 1px
+  line-height: 20px
 
 =font-sans-large
   font-family: $sansFontFamily
