--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -19,8 +19,10 @@
 .intro
   h1
     color: $brick
+  +font-sans-medium
 
 .creators
+  +font-sans-medium
   margin-bottom: 20px
   h3
     +font-sans-small
@@ -29,7 +31,7 @@
     font-weight: bold
   .creator
     h4
-      +font-serif-large
+      +font-sans-large
       color: $brick
     p
       margin-top: 5px
