--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -8,8 +8,7 @@
     color: $gray
     text-transform: uppercase
   p
-    font-weight: 200
-    line-height: 20px
+    +font-sans-medium
     margin: 20px 20px
   .horizontal-divider
     margin: 10px 0
