--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -18,6 +18,7 @@
       line-height: 20px
       li
         padding: 7px 0px
+        line-height: 20px
       p
         margin: 0px
   .step-img-col
