title tags for images

--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -24,6 +24,7 @@
         %th Title
         %th Directions (Markdown or HTML)
         %th Image Id
+        %th Image Description
         %th Youtube Id
       = render 'step_form', step: nil
       - @recipe.ordered_steps.each do |step|
