--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -52,7 +52,7 @@
       .step-image
         - if step.image_id?
           %a{:href => s3_image_url(step.image_id), :target => "_blank"}
-            %img{:itemprop => "image", src: s3_image_url(step.image_id)}
+            %img{:itemprop => "image", src: s3_image_url(step.image_id), alt: step.image_description? ? step.image_description : nil, title: step.image_description? ? step.image_description : nil}
         - else
           = image_tag('img_placeholder.jpg')
 
