updated login box

--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -56,3 +56,14 @@
 .facebook
   padding-left: 20px
 
+.login
+  padding: 20px
+  text-align: center
+  width: 50%
+  margin: 100px 25%
+  height: inherit
+  .box-field
+    padding: 10px
+    input
+      margin: 0px
+
