--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -360,6 +360,9 @@
       .option img
         max-width: 145px
 
+  .login
+    margin: 20px
+
 /* Everything but portrait iphone*/
 @media (max-width: 480px)
   .enter-email
