sign in and sign out improvements

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -198,6 +198,10 @@
       text-align: left
       padding-left: 5px
 
+  .box.login
+    margin: 20px 0px
+    width: 100%
+
 /* Android phone. Weird inbetween*/
 @media (max-width: 520px)
   .user-form
@@ -359,9 +363,6 @@
           top: 60%
       .option img
         max-width: 145px
-
-  .login
-    margin: 20px
 
 /* Everything but portrait iphone*/
 @media (max-width: 480px)
