--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -56,7 +56,7 @@
 .facebook
   padding-left: 20px
 
-.login
+.box-solo
   padding: 20px
   text-align: center
   width: 50%
@@ -66,4 +66,5 @@
     padding: 10px
     input
       margin: 0px
+      text-align: center
 
