fix placeholder color to be visible on my monitor

--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -105,6 +105,7 @@ $inputBorder:                   #ccc;
 $inputBorderRadius:             3px;
 $inputDisabledBackground:       $brickLight;
 $formActionsBackground:         #f5f5f5;
+$placeholderText:               $grayMedium;
 
 // Dropdowns
 // -------------------------
