--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -57,6 +57,6 @@
             =label_tag :okay_to_email do
               = check_box_tag :okay_to_email, true, true
               = "Please email me the latest updates from ChefSteps".html_safe
-            =f.submit 'Sign Up', class: 'btn btn-primary'
+            =f.submit 'Sign up', class: 'btn btn-primary'
     .registration.facebook
       = render 'devise/shared/facebook_login', text: 'Sign up with <b>Facebook</b>'
