--- a/app/views/mailing_list/_subscribe.html.haml
+++ b/app/views/mailing_list/_subscribe.html.haml
@@ -10,5 +10,5 @@
 = form_tag 'users/sign_up', class: 'form-inline', :method => :get do
   .input-append
     = email_field_tag 'email', nil, {class: 'span3', placeholder: 'Enter your email for updates', required: true}
-    %button.btn.btn-primary{ :type=>"submit"}
+    %button.btn.btn-primary{ :type=>"submit", id: 'subscribe-email'}
       %i.icon-double-chevron-right
