sign in button adjustment

--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -67,6 +67,11 @@
         input
           width: 210px
 
+    .signin
+      a
+        margin-bottom: 2px
+        margin-left: -25px
+
   .auth-group
     display: inline-block
     vertical-align: bottom
