--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -45,7 +45,7 @@
         / .auth-group.noprint
         /   #authentication
         .navbar.noprint
-          %ul.nav
+          %ul.nav.signin
             %li
               - if user_signed_in?
                 = link_to destroy_user_session_path, method: :delete do
