remove unecessary header js

--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -79,36 +79,13 @@
       .dropdown-menu
         margin-left: -110px
         margin-top: 5px
-        text-align: center
         li
           padding: 0px
           width: 100%
           +font-sans-medium
-          color: black
-
-  .auth-group
-    display: inline-block
-    vertical-align: bottom
-    margin-bottom: 7px
-
-    #authentication
-      display: inline-block
-      vertical-align: bottom
-
-      li.authentication
-        +no-icons
-        display: inline-block
-        vertical-align: bottom
-
-        list-style: none
-        margin-top: 0px
-        border: none
-        background: white
-
-        a
-          display: inline-block
-          +font-serif-small
-
+          text-align: left
+          a
+            color: black
 
 // This stuff applies to both the global nav bar and the sticky navbar
 .navbar
