--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -42,11 +42,9 @@
               = render 'mailing_list/subscribe'
 
       -unless external
-        / .auth-group.noprint
-        /   #authentication
         .navbar.user-auth.noprint
           - if user_signed_in?
-            .dropdown
+            .dropdown#user-dropdown
               = link_to '#', data: {toggle: 'dropdown'} do
                 = image_tag current_user_presenter.profile_image_url()
               %ul.dropdown-menu
