add default avatar image

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -46,7 +46,7 @@
           - if user_signed_in?
             .dropdown#user-dropdown
               = link_to '#', data: {toggle: 'dropdown'} do
-                = image_tag current_user_presenter.profile_image_url()
+                = gravatar_image_tag(current_user.email, alt: current_user.name, gravatar: { default: 'http://www.chefsteps.com/assets/default_avatar.png'})
               %ul.dropdown-menu
                 %li= link_to 'Profile', user_profile_path(current_user)
                 %li= link_to 'Sign out', destroy_user_session_path, method: :delete
