update hover color

--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -86,6 +86,8 @@
           text-align: left
           a
             color: black
+            &:hover
+              color: white
 
 // This stuff applies to both the global nav bar and the sticky navbar
 .navbar
